--- a/entreprise.html
+++ b/entreprise.html
@@ -46,61 +46,56 @@
     </div>
 
 <div class="ui main center aligned text container">
-
-
-
-
-        <div class="ui divider"></div>
-        <div class="ui grid container">
-            <div class="sixteen wide column">
-                <h1 class="ui header">Suited for your business cases</h1>
+    <img class="ui small centered image" src="assets/images/logo.png"/>
+    <h1 style="font-size: 45px;" class="ui header">About Us</h1>
+    <h3 style="color: #555555" class="ui header">DBS was founded in 2017 with the mission of giving every society to grant themselves modern and reliable Badging System.</h3>
+    <div class="ui one column stackable center aligned page grid">
+        <div class="column twelve wide">
+            <div class="ui big buttons">
+                <a href="features.html" class="ui button">Learn more</a>
+                <div class="or"></div>
+                <a class="ui positive button">Sign up</a>
             </div>
-        </div>
-
-        <div class="ui divider"></div>
-
-
-        <div class="ui center aligned grid container">
-            <div class="sixteen wide column">
-
-                <img class="ui fluid rounded image" src="assets/images/hardphone.jpg"/>
-
-                <h3 class="ui header">Hardened and Ready-to-use Phone</h3>
-                <p>Our first-class business designed phone has been made to ensure the highest quality for business needs, at the lowest price.</p>
-                <p>With an hardened Android-based system and our applications ready to use, it will fit perfectly to your employees.</p>
-                <p>It is not a one-task phone : you can use it for emails, phoning, installing your own business applications and even more.</p>
-                <div class="ui labeled button" tabindex="0">
-                  <div class="ui button">
-                    <i class="big mobile icon"></i> Buy it !
-                  </div>
-                  <a class="ui basic label">
-                    250€/µ
-                  </a>
-                </div>
-            </div>
-        </div>
-
-        <div class="ui divider"></div>
-
-        <div class="ui center aligned grid container">
-            <div class="sixteen wide column">
-
-                <img class="ui fluid rounded image" src="assets/images/nfc_phone.jpg"/>
-
-                <h2 class="ui header">NFC Phones</h2>
-                <p>Our solution is compatible with every NFC phones on the market. The only requirement is to install our smartphone application on your employees phone.</p>
-                <p>The application is provided for free when subscribing for our offers.</p>
-            </div>
-        </div>
-
-
-    <div class="ui divider"></div>
-    <div class="ui center aligned grid container">
-        <div class="sixteen wide column">
-            <h3>Make your business grow faster and safer</h3>
-            <button class="ui medium positive button">Sign Up</button>
         </div>
     </div>
+
+    <div class="ui divider"></div>
+
+    <div class="ui three statistics">
+      <div class="statistic">
+        <div class="label">
+        Born
+        </div>
+        <div class="value">
+        2017
+        </div>
+
+      </div>
+      <div class="statistic">
+          <div class="label">
+            Team
+          </div>
+        <div class="value">
+          5
+        </div>
+
+      </div>
+      <div class="statistic">
+          <div class="label">
+            Raised
+          </div>
+        <div class="text value">
+          76 <br/>Millions €
+        </div>
+
+      </div>
+    </div>
+    <div class="ui divider"></div>
+
+    <h1 style="font-size: 45px;" class="ui header">Our Objectives</h1>
+    <p></p>
+
+
 </div>
 
   <div class="ui inverted vertical footer segment">
