--- a/features.html
+++ b/features.html
@@ -31,7 +31,7 @@
               <a class="disabled item" href="#">Tags</a>
             </div>
           </div>
-          <a class="disabled item" href="#">Entreprise</a>
+          <a class="item" href="entreprise.html">Entreprise</a>
           <a class="item" href="pricing.html">Pricing</a>
         <a class="disabled item" href="#">Customers</a>
         <div class="ui simple dropdown item">
@@ -55,12 +55,8 @@
                     </div>
                     <div class="content">
                         <a class="header">In the Cloud</a>
-                        <div class="meta">
-                            <span>Description</span>
-                        </div>
                         <div class="description">
-                        <p>Aute esse cillum quis malis nisi minim minim quid minim anim eram dolor illum
-                        tempor quorum veniam culpa quem eram.</p>
+                        <p>We take care of the infrastructure for you, providing complete and easy-to-use interface available from everywhere.</p>
                         </div>
 
                     </div>
@@ -74,13 +70,9 @@
                         <i class="huge rss icon"></i>
                     </div>
                     <div class="content">
-                        <a class="header">In the Cloud</a>
-                        <div class="meta">
-                            <span>Description</span>
-                        </div>
+                        <a class="header">Alert system</a>
                         <div class="description">
-                        <p>Aute esse cillum quis malis nisi minim minim quid minim anim eram dolor illum
-                        tempor quorum veniam culpa quem eram.</p>
+                        <p>Get notified instantly with a simple configurable and powerful alert system.</p>
                         </div>
 
                     </div>
@@ -94,13 +86,9 @@
                         <i class="huge world icon"></i>
                     </div>
                     <div class="content">
-                        <a class="header">In the Cloud</a>
-                        <div class="meta">
-                            <span>Description</span>
-                        </div>
+                        <a class="header">Working everywhere</a>
                         <div class="description">
-                        <p>Aute esse cillum quis malis nisi minim minim quid minim anim eram dolor illum
-                        tempor quorum veniam culpa quem eram.</p>
+                        <p>Using only NFC and smartphones, our system can work almost everywhere.</p>
                         </div>
 
                     </div>
@@ -114,13 +102,9 @@
                         <i class="huge mobile icon"></i>
                     </div>
                     <div class="content">
-                        <a class="header">In the Cloud</a>
-                        <div class="meta">
-                            <span>Description</span>
-                        </div>
+                        <a class="header">Always up-to-date</a>
                         <div class="description">
-                        <p>Aute esse cillum quis malis nisi minim minim quid minim anim eram dolor illum
-                        tempor quorum veniam culpa quem eram.</p>
+                        <p>With our all-connected solution, you never miss business-valuable information. In case, everything is archived for future lookup.</p>
                         </div>
 
                     </div>
@@ -135,9 +119,8 @@
 
             <img class="ui fluid rounded image" src="assets/images/dashboard_3.png"/>
 
-            <h2 class="ui header">We take the pain out of your company</h2>
-            <p>anim malis magna quae nulla quem aute aliqua amet duis quem duis legam veniam
-                irure malis malis esse aute quae</p>
+            <h2 class="ui header">We take the pain out of your company</h2>à
+            <p>DBS provides an intuitive, modern and high-functional interface with planings, alerts, reporting and many other functionnalities.</p>
         </div>
     </div>
 
@@ -148,8 +131,8 @@
             <img class="ui fluid rounded image" src="assets/images/nfc_phone.jpg"/>
 
             <h2 class="ui header">NFC Based solution</h2>
-            <p>anim malis magna quae nulla quem aute aliqua amet duis quem duis legam veniam
-                irure malis malis esse aute quae</p>
+            <p>NFC technology, present in almost every recent iPhones and Android mobiles, permits secured and flexible appliances.</p>
+            <p>By using NFC tags as a secured checkpoint, you ensure that your employees are in the right place, at the right moment.</p>
         </div>
     </div>
 
