--- a/pricing.html
+++ b/pricing.html
@@ -32,7 +32,7 @@
             <a class="disabled item" href="#">Tags</a>
           </div>
         </div>
-        <a class="disabled item" href="#">Entreprise</a>
+        <a class="item" href="entreprise.html">Entreprise</a>
         <a class="item" href="pricing.html">Pricing</a>
       <a class="disabled item" href="#">Customers</a>
       <div class="ui simple dropdown item">
