--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               <a class="disabled item" href="#">Tags</a>
             </div>
           </div>
-          <a class="disabled item" href="#">Entreprise</a>
+          <a class="item" href="entreprise.html">Entreprise</a>
           <a class="item" href="pricing.html">Pricing</a>
         <a class="disabled item" href="#">Customers</a>
         <div class="ui simple dropdown item">
@@ -59,6 +59,8 @@
         </div>
     </div>
     <div class="ui divider"></div>
+
+    <p>Pay only for what you need without installation. 100% Cloud, all included. </strong></p>
 
     <p>Do not remain in doubt, start anticipating now: <strong>Trust - Control - Security</strong></p>
     <a class="ui medium positive basic button" href="pricing.html">Check our prices</a>
