--- a/entreprise.html
+++ b/entreprise.html
@@ -92,8 +92,49 @@
     </div>
     <div class="ui divider"></div>
 
-    <h1 style="font-size: 45px;" class="ui header">Our Objectives</h1>
-    <p></p>
+    <h1 class="ui icon header">
+        <i class="ui yellow star icon"></i>
+        <div class="content">
+        Our Objectives
+    </div>
+    </h1>
+    <p>Many service companies needs to send employee on their client site without being able to control their presence.
+        This can lead to many business issues, like truancy or false testimony from your clients or employees.</p>
+        <div class="ui divider"></div>
+
+        <h1 class="ui icon header">
+            <i class="ui green check icon"></i>
+            <div class="content">
+            Why choose our product ?
+        </div>
+        </h1>
+
+        <p>By providing a <strong>state-of-art</strong> badging system solution, we enable businesses to work gracefully for companies, their employees and their clients.</p>
+
+        <div class="ui divider"></div>
+
+    <div class="ui grid">
+        <div class="seven wide column">
+            <h2 class="ui header">For you</h2>
+            <ul class="ui list">
+                <li>Better management of employees with lower costs.</li>
+                <li>Scale as fast as your company.</li>
+                <li>No maintenance or operational fees.</li>
+                <li>Protect your employees from abusive clients testimonies</li>
+            </ul>
+
+        </div>
+        <div class="seven wide column">
+            <h2 class="ui header">For your employees</h2>
+            <ul class="ui list">
+                <li>Non-intrusive and easy-to use system.</li>
+                <li>Timesheets are now items from the past. Everything is centralized and stored automatically.</li>
+                <li>Data are immutable, ensuring protection against abuses over your working hours.</li>
+
+            </ul>
+        </div>
+    </div>
+
 
 
 </div>
