Added table for homepage Fixed pricing

--- a/index.html
+++ b/index.html
@@ -67,7 +67,88 @@
 
     <div class="ui divider"></div>
 
-    <h3>They trust us</h3>
+
+
+    <h1 class="ui icon header">
+        <i class="ui green check icon"></i>
+        <div class="content">
+            Why choose our product ?
+        </div>
+    </h1>
+
+    <table class="ui center aligned celled table">
+        <thead>
+            <tr>
+                <th>Functionnalities</th>
+                <th>Digital Badging System</th>
+                <th>SaaS2B</th>
+                <th>Allied Universal</th>
+                <th>Guard Tour Management</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Low cost cloud-based system, with no maintenance</td>
+                <!-- DBS -->
+                <td><i class="ui large green check icon"></i></td>
+                <!-- SaaS2B -->
+                <td><i class="ui large red remove icon"></i></td>
+                <!-- AU -->
+                <td><i class="ui large red remove icon"></i></td>
+                <!-- GTM -->
+                <td><i class="ui large red remove icon"></i></td>
+            </tr>
+            <tr>
+                <td>NFC secured technology</td>
+                <!-- DBS -->
+                <td><i class="ui large green check icon"></i></td>
+                <!-- SaaS2B -->
+                <td><i class="ui large green check icon"></i></td>
+                <!-- AU -->
+                <td><i class="ui large red remove icon"></i></td>
+                <!-- GTM -->
+                <td><i class="ui large green check icon"></i></td>
+            </tr>
+            <tr>
+                <td>Up-to-date system with easy-to-use data report</td>
+                <!-- DBS -->
+                <td><i class="ui large green check icon"></i></td>
+                <!-- SaaS2B -->
+                <td><i class="ui large red remove icon"></i></td>
+                <!-- AU -->
+                <td><i class="ui large red remove icon"></i></td>
+                <!-- GTM -->
+                <td><i class="ui large red remove icon"></i></td>
+            </tr>
+            <tr>
+                <td>Adaptable system for various business needs</td>
+                <!-- DBS -->
+                <td><i class="ui large green check icon"></i></td>
+                <!-- SaaS2B -->
+                <td><i class="ui large green check icon"></i></td>
+                <!-- AU -->
+                <td><i class="ui large green check icon"></i></td>
+                <!-- GTM -->
+                <td><i class="ui large green check icon"></i></td>
+            </tr>
+            <tr>
+                <td>Real-time system accessible from everywhere</td>
+                <!-- DBS -->
+                <td><i class="ui large green check icon"></i></td>
+                <!-- SaaS2B -->
+                <td><i class="ui large red remove icon"></i></td>
+                <!-- AU -->
+                <td><i class="ui large red remove icon"></i></td>
+                <!-- GTM -->
+                <td><i class="ui large red remove icon"></i></td>
+            </tr>
+        </tbody>
+    </table>
+
+    <div class="ui divider"></div>
+
+
+    <h1 class="ui header">They trust us</h1>
     <div class="ui statistics">
       <div class="statistic">
         <div class="value">
@@ -94,6 +175,26 @@
         </div>
       </div>
     </div>
+
+    <div class="ui divider"></div>
+
+    <h1 class="ui icon header">
+        <i class="ui blue line chart icon"></i>
+        <div class="content">
+            Embrace the future of badging system
+        </div>
+    </h1>
+
+    <p>Enable your business to grow faster, choose DBS.</p>
+
+    <div class="ui big buttons">
+        <a href="features.html" class="ui button">Learn more</a>
+        <div class="or"></div>
+        <a class="ui positive button">Sign up</a>
+    </div>
+
+    <div class="ui divider"></div>
+
 
 </div>
 
