--- a/entreprise.html
+++ b/entreprise.html
@@ -135,7 +135,51 @@
         </div>
     </div>
 
+    <div class="ui divider"></div>
 
+    <h1 class="ui icon header">
+        <i class="ui yellow idea icon"></i>
+        <div class="content">
+        S.W.O.T
+    </div>
+    </h1>
+
+    <div class="ui two column grid">
+      <div class="column">
+        <div class="ui raised segment">
+          <a class="ui green label">Strenghts</a>
+          <ul class="ui list">
+                <li>Enable better quality of service for clients</li>
+                <li>Easier to manage growing amount of employees</li>
+                <li>Simple to use</li>
+          </ul>
+          <div class="ui divider"></div>
+          <a class="ui blue  label">Opportunities</a>
+          <ul class="ui list">
+                <li>NFC Technologies are a trending topic</li>
+                <li>Smartphones are common for public use-cases.</li>
+
+          </ul>
+        </div>
+      </div>
+      <div class="column">
+        <div class="ui raised segment">
+          <a class="ui grey  label">Weaknesses</a>
+          <ul class="ui list">
+                <li>Employees need NFC phones.</li>
+                <li>Necessity to set and add a tag in every location.</li>
+
+          </ul>
+          <div class="ui divider"></div>
+          <a class="ui red  label">Threats</a>
+          <ul class="ui list">
+                <li>Blocking from CNIL-like governemental institution</li>
+                <li>Employees feeling under surveillance because of our system.</li>
+
+          </ul>
+        </div>
+      </div>
+    </div>
 
 </div>
 
