Last updates before presenting

--- a/features.html
+++ b/features.html
@@ -31,8 +31,8 @@
               <a class="disabled item" href="#">Tags</a>
             </div>
           </div>
-          <a class="item" href="entreprise.html">Entreprise</a>
           <a class="item" href="pricing.html">Pricing</a>
+          <a class="item" href="entreprise.html">Entreprise</a>
         <a class="disabled item" href="#">Customers</a>
         <div class="ui simple dropdown item">
           Support <i class="dropdown icon"></i>
@@ -119,7 +119,7 @@
 
             <img class="ui fluid rounded image" src="assets/images/dashboard_3.png"/>
 
-            <h2 class="ui header">We take the pain out of your company</h2>à
+            <h2 class="ui header">We take the pain out of your company</h2>
             <p>DBS provides an intuitive, modern and high-functional interface with planings, alerts, reporting and many other functionnalities.</p>
         </div>
     </div>
